--- a/M9_Final_Assignment.ipynb
+++ b/M9_Final_Assignment.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
@@ -16,6 +17,7 @@
    },
    "source": [
     "# Codio Coding Assignment 9.1: GitHub and Advanced Python Functions\n",
+    "Damien Wimbush\n",
     "\n",
     "### Learning Outcomes Addressed\n",
     "\n",
